Arrumando os trem pra poder rodar a gramática pelo ANTLR.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/compilers2-t3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.antlr-4.5.3-complete.jar=dist\\lib\\antlr-4.5.3-complete.jar
+file.reference.antlr-4.5.3-complete.jar-1=C:\\Users\\Fuler\\Desktop\\antlr-4.5.3-complete.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.antlr-4.5.3-complete.jar}
+    ${file.reference.antlr-4.5.3-complete.jar}:\
+    ${file.reference.antlr-4.5.3-complete.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
